--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.27.4",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-to-pdf": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
