--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "next-sitemap"
   },
+  
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.27.4",
@@ -15,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "next": "15.5.4",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-to-pdf": "^2.0.1",
